scripts/hermes_fuzz_executed/fuzz_21_execution
'use strict';
const obj = {};
obj.a = obj.b = obj);   
obj.a = obj.b = obj  
 

  })

},[106]);

Execution Output ------------------:
test.js:3:20: error: ';' expected
obj.a = obj.b = obj);   
                   ^
